horizontal scroll fix

--- a/src/components/feelSpecial/feelSpecial.css
+++ b/src/components/feelSpecial/feelSpecial.css
@@ -10,7 +10,7 @@
 .photo-section {
   height: 100%;
   min-height: 100vh;
-  min-width: 100vw;
+  width: 100%;
   background-size: cover;
 }
 
